vlib/v/checker/tests/vweb_missing_result.out
vlib/v/checker/tests/vweb_missing_result.vv:9:1: error: vweb actions must return `vweb.Result`
    7 | // actions must return results
    8 | @['/foo/:bar']
    9 | pub fn (mut app App) foo(a string) {
      | ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   10 | }
   11 |
